# WebPilot

./: .env.example  .gitignore  pyproject.toml  webpilot.db
.claude/: settings.local.json
scripts/: smoke_phase1.py
tests/: conftest.py  test_api.py  test_browser.py  test_config.py  test_events.py  test_guardrails.py  test_planner_loop.py  test_runner.py  test_search.py  test_store.py  test_tools.py
tests/fixtures/site/: index.html  links.html
webpilot/: api.py  config.py  events.py  main.py  store.py
webpilot/agent/: browser.py  cli.py  guardrails.py  planner.py  reporter.py  runner.py  search.py  tools.py
webpilot/prompts/: system.md
